force-app/main/default/objects/FieloCH__MissionCriteria__c/FieloCH__MissionCriteria__c.object-meta.xml
<CustomObject>
    <label>Mission Criteria</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mission Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>