force-app/main/default/objects/FieloCH__MissionCriteria__c/fields/FieloCH__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__FieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>