force-app/main/default/objects/FieloCH__MissionCriteria__c/fields/FieloCH__Values__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Values__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>